--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
         xmlns:tools="schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="vertical_margin"
+        android:paddingLeft="horizontal_margin"
+        android:paddingRight="horizontal_margin"
+        android:paddingTop="vertical_margin"
         tools:context=".MainActivity" >
         <TextView
             android:id="@+id/city_field"
